# ai-knowledge-base-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: documents.py  query.py
app/core/: config.py
app/db/: models.py  session.py
app/services/: chunker.py  embedder.py  extractor.py  llm.py  prompts.py  rag.py  vector_store.py
app/ui/static/: app.js  styles.css
app/ui/templates/: index.html
sample_docs/: Sample_Knowledge_Base_DOCX.docx
scripts/: run.ps1  setup.ps1
